syntax = "proto3";

package api;

service API {
  // Sends a greeting
  rpc StartService(StartServiceRequest) returns (StartServiceReply) {}
}

message StartServiceRequest {
  string name = 1;
  bytes proto = 2;
  int32 port = 3;
  string container_id = 4;
}

message StartServiceReply {}
